# zxc

./: .gitignore  AutoLauncher.spec  LICENSE  README.md  build_exe.py  pyproject.toml  run.py  test_improved_recognition.py  test_screenshot.py  test_self.py  test_template.py  test_window_activate.py  test_wizard.py
auto_launcher/: __init__.py  main.py
auto_launcher/core/: __init__.py  automation.py  countdown.py
auto_launcher/resources/templates/: __init__.py
auto_launcher/ui/: __init__.py  main_window.py  window_binder.py
auto_launcher/utils/: __init__.py  image_recognition.py  runtime.py  screenshot_tool.py  system_utils.py
tools/: create_template.py
