[tool.poetry]
name = "auto-script-launcher"
version = "0.1.0"
description = "自动化脚本启动器 - 定时执行远程电脑上的自动化测试脚本"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "auto_launcher"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
PySide6 = "^6.6.0"
opencv-python = "^4.9.0"
pyautogui = "^0.9.54"
Pillow = "^10.2.0"
pywin32 = "^306"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "auto_launcher.main:main"
